--- a/jtc_services_txt.html
+++ b/jtc_services_txt.html
@@ -7,8 +7,8 @@
     Case Problem 1
     
     Jacobs Tree Care Services
-    Author: 
-    Date:   
+    Author: Audrey Sparks 
+    Date:   August 14, 2019
 
     Filename: jtc_services.html
 	-->
