added changes pt 3
steps 10 and 11

--- a/jtc_services_txt.html
+++ b/jtc_services_txt.html
@@ -1,22 +1,26 @@
 <!doctype html>
 <html>
 <head>
+        <meta charset= "UTF-8">
 <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 1
     Case Problem 1
     
-    Jacobs Tree Care Services
+    Jedds Tree Care Services
     Author: Audrey Sparks 
     Date:   August 14, 2019
 
-    Filename: jtc_services.html
+    Filename: jtc_services_txt.html
 	-->
 
 </head>
 
 <body>
-
+        <header> 
+                <li><a href= "jtc_index.html"> Home </a></li>
+                <li><a href= "jtc_services.html"> Services </a></li>
+         </header>
 </body>
 
 </html>
