--- a/jtc_index_txt.html
+++ b/jtc_index_txt.html
@@ -16,8 +16,8 @@
    -->
 <title> Jedds Tree Care </title> 
 
-<link href=" jtc_base.css" rel= stylesheet> 
-<link href=" jtc_layout.css" rel= stylesheet> 
+<link href="jtc_base.css" rel="stylesheet"/> 
+<link href="jtc_layout.css" rel= "stylesheet"/> 
 </head>
 
 <body>
