--- a/jtc_index_txt.html
+++ b/jtc_index_txt.html
@@ -17,7 +17,8 @@
 <title> Jedds Tree Care </title> 
 
 <link href="jtc_base.css" rel="stylesheet"/> 
-<link href="jtc_layout.css" rel= "stylesheet"/> 
+<link href="jtc_layout.css" rel="stylesheet"/> 
+<link rel="stylesheet" href="jtc_layout.css">
 </head>
 
 <body>
@@ -54,9 +55,10 @@
     </aside>
 
     <header> 
+        <ul> 
     <li><a href= "jtc_index.html"> Home </a></li>
     <li><a href= "jtc_services.html"> Services </a></li>
-
+</ul>
     </header>
     <article> 
         <img src= "jtc_photo1.png" alt "Jeds Tree Care" /> 
