--- a/jtc_index_txt.html
+++ b/jtc_index_txt.html
@@ -55,10 +55,12 @@
     </aside>
 
     <header> 
+        <nav> 
         <ul> 
     <li><a href= "jtc_index.html"> Home </a></li>
     <li><a href= "jtc_services.html"> Services </a></li>
 </ul>
+</nav>
     </header>
     <article> 
         <img src= "jtc_photo1.png" alt "Jeds Tree Care" /> 
