--- a/jtc_index_txt.html
+++ b/jtc_index_txt.html
@@ -18,7 +18,7 @@
 
 <link href="jtc_base.css" rel="stylesheet"/> 
 <link href="jtc_layout.css" rel="stylesheet"/> 
-<link rel="stylesheet" href="jtc_layout.css">
+
 </head>
 
 <body>
@@ -57,8 +57,8 @@
     <header> 
         <nav> 
         <ul> 
-    <li><a href= "jtc_index.html"> Home </a></li>
-    <li><a href= "jtc_services.html"> Services </a></li>
+    <li><a href= "jtc_index_txt.html"> Home </a></li>
+    <li><a href= "jtc_services_txt.html"> Services </a></li>
 </ul>
 </nav>
     </header>
